--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "vesti",
-  "name": "vesti Web Application",
+  "name": "ElhayCrypto web application",
   "icons": [
     {
       "src": "favicon.ico",
